kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dermacam-app
  namespace: dermacam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dermacam-app
  template:
    metadata:
      labels:
        app: dermacam-app
    spec:
      containers:
        - name: dermacam-app
          image: registry.gitlab.com/lappis-unb/decidimbr/dermalert:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          command: ["/bin/sh", "-c"]
          args:
            - poetry run alembic upgrade head && poetry run uvicorn app.main:app --reload --workers 1 --host 0.0.0.0 --port 8000
          resources:
            limits:
              memory: 1Gi
              cpu: "1"
            requests:
              memory: 512Mi
              cpu: "1"
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
