kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dermacam-service
  namespace: dermacam
spec:
  selector:
    app: dermacam-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
